# src/http/controller/setting.go
@@ -1,6 +1,8 @@
 package controller
 
 import (
+	"encoding/json"
+	"errors"
 	"fmt"
 	"gbase/src/core/http/request"
 	"gbase/src/core/http/response"
@@ -8,9 +10,13 @@ import (
 	"gbase/src/http/resource"
 	m "gbase/src/model"
 	"gbase/src/repository"
+	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 	"github.com/gin-gonic/gin/binding"
+	"github.com/go-playground/validator/v10"
+	"gorm.io/gorm"
 )
 
 type SettingController struct {
@@ -27,8 +33,10 @@ func NewSettingController() *SettingController {
 
 func (ctrl *SettingController) RegisterRoutes(r *gin.RouterGroup) {
 	r.GET("/settings", ctrl.SettingIndex)
-	r.GET("/settings/:group", ctrl.SettingShow)
-	r.PUT("/settings/:group", ctrl.SettingUpdate)
+	r.GET("/settings/:id", ctrl.SettingShow)
+
+	r.GET("/settings/groups/:group", ctrl.SettingGroupShow)
+	r.PUT("/settings/groups/:group", ctrl.SettingUpdate)
 }
 
 // @Tags Setting 設定
@@ -49,13 +57,37 @@ func (ctrl *SettingController) SettingIndex(c *gin.Context) {
 }
 
 // @Tags Setting 設定
-// @Router /settings/{group} [get]
+// @Router /settings/{id} [get]
+// @Summary 獲取設定資訊
+// @Accept  json
+// @Produce  json
+// @Param   id path string true "設定ID"
+// @Success 200 {object} response.Response{data=resource.Settings} "code:200"
+// @Failure 404 {object} response.Response{} "code:404, message:查無該資料"
+func (ctrl *SettingController) SettingShow(c *gin.Context) {
+	id := c.Param("id")
+
+	result, err := ctrl.repo.Find(id)
+	if err != nil {
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			response.ErrorNotFound(c)
+			return
+		}
+		response.Error(c, nil, fmt.Sprintf("查詢失敗: %v", err))
+		return
+	}
+
+	response.Success(c, ctrl.res.Single(result))
+}
+
+// @Tags Setting 設定
+// @Router /settings/groups/{group} [get]
 // @Summary 獲取設定資訊
 // @Accept  json
 // @Produce  json
 // @Param   group path string true "群組"
 // @Success 200 {object} response.Response{data=resource.Settings} "code:200"
-func (ctrl *SettingController) SettingShow(c *gin.Context) {
+func (ctrl *SettingController) SettingGroupShow(c *gin.Context) {
 	group := c.Param("group")
 
 	list, pagination, err := ctrl.repo.FindAll(map[string]string{"group": group})
@@ -68,7 +100,7 @@ func (ctrl *SettingController) SettingShow(c *gin.Context) {
 }
 
 // @Tags Setting 設定
-// @Router /settings/{group} [put]
+// @Router /settings/groups/{group} [put]
 // @Summary 編輯設定
 // @Accept  json
 // @Produce  json
@@ -82,7 +114,7 @@ func (ctrl *SettingController) SettingUpdate(c *gin.Context) {
 	group := c.Param("group")
 
 	// get body data
-	body := ctrl.repo.NewInput().(m.SettingInputs)
+	body := m.SettingInputs{}
 	if err := c.ShouldBindBodyWith(&body, binding.JSON); err != nil {
 		response.Error(c, nil, fmt.Sprintf("%s: %v", def.BIND_BODY_FAILED, err))
 		return
@@ -103,4 +135,45 @@ func (ctrl *SettingController) SettingUpdate(c *gin.Context) {
 	}
 
 	response.Success(c, nil, def.UPDATE_SUCCESS)
+}
+
+// 驗證陣列object
+func validateSettingArray[T any](c *gin.Context, item m.SettingInput) error {
+	var bindInput []T // 驗證的model格式
+
+	b, err := json.Marshal(item.Value)
+	if err != nil {
+		response.Error(c, nil, fmt.Sprintf("%s: %v", def.BIND_BODY_FAILED, err))
+		return err
+	}
+
+	if err := json.Unmarshal(b, &bindInput); err != nil {
+		response.Error(c, nil, fmt.Sprintf("%s: %v", def.BIND_BODY_FAILED, err))
+		return err
+	}
+
+	errorsMap := map[string][]request.ErrorBag{}
+	for i, s := range bindInput {
+		if err := request.Validate.Struct(s); err != nil {
+			if ve, ok := err.(validator.ValidationErrors); ok {
+				errBags, ferr := request.FormateErrorBag(ve)
+				if ferr != nil {
+					response.Error(c, nil, fmt.Sprintf("%s: %v", def.BIND_BODY_FAILED, ferr))
+					return ferr
+				}
+				errorsMap[strconv.Itoa(i)] = errBags
+			} else {
+				response.Error(c, nil, fmt.Sprintf("%s: %v", def.BIND_BODY_FAILED, err))
+				return err
+			}
+		}
+	}
+
+	if len(errorsMap) > 0 {
+		response.Error(c, resource.ErrorValidation{Errors: map[string]map[string][]request.ErrorBag{item.Id: errorsMap}}, "", http.StatusUnprocessableEntity)
+
+		return errors.New(def.BIND_BODY_FAILED)
+	}
+
+	return nil
 }
