# src/model/setting.go
@@ -2,6 +2,7 @@ package model
 
 import (
 	"gbase/src/core/db"
+	core "gbase/src/core/model"
 
 	"gorm.io/gorm"
 )
@@ -9,22 +10,23 @@ import (
 var _ IModel = (*Setting)(nil)
 
 type SettingInput struct {
-	Id    string `json:"id" example:"ip" validate:"required"` // 設定ID
-	Value string `json:"value" example:"192.1.1.1"`           // 設定值
+	Id    string          `json:"id" example:"ip" validate:"required"` // 設定ID
+	Value core.JsonString `json:"value" example:"192.1.1.1"`           // 設定值
 }
 
 type SettingInputs []SettingInput //@name SettingInputs
 
+// value預設是string的json或string、option預設是null的純json
 type Setting struct {
 	Model
-	Id         string `json:"id"`
-	Value      string `json:"value"`                                           // 設定值
-	Name       string `json:"name"`                                            // 名稱
-	Type       string `json:"type"`                                            // 表單類型
-	Group      string `json:"group"`                                           // 群組
-	Option     any    `gorm:"null;default:null;serializer:json" json:"option"` // 表單選項，為陣列或object
-	IsViewable bool   `gorm:"column:isViewable" json:"isViewable"`
-	IsEditable bool   `gorm:"column:isEditable" json:"isEditable"`
+	Id         string          `json:"id"`
+	Value      core.JsonString `gorm:"type:json" json:"value"`                          // 設定值
+	Name       string          `json:"name"`                                            // 名稱
+	Type       string          `json:"type"`                                            // 表單類型
+	Group      string          `json:"group"`                                           // 群組
+	Option     any             `gorm:"null;default:null;serializer:json" json:"option"` // 表單選項，為陣列或object
+	IsViewable bool            `gorm:"column:isViewable" json:"isViewable"`
+	IsEditable bool            `gorm:"column:isEditable" json:"isEditable"`
 } //@name Setting
 
 func (Setting) NewModel() IModel {
